EXTRA_DIST = config.h glib_wrapper.c stardict.sln stardictrc.rc	\
		stardict-editorrc.rc \
		stardict-advertisement-plugin.vcproj \
		stardict-dictdotcn-plugin.vcproj \
		stardict-editor.vcproj \
		stardict-editor-loader.vcproj \
		stardict-html-parsedata-plugin.vcproj \
		stardict-lib.vcproj \
		common-lib.vcproj \
		stardict-loader.vcproj \
		stardict-powerword-parsedata-plugin.vcproj \
		stardict-qqwry-plugin.vcproj \
		stardict-sapi-tts-plugin.vcproj \
		stardict-test-str.vcproj \
		stardict-update-info-plugin.vcproj \
		stardict-wiki-parsedata-plugin.vcproj \
		stardict-wordnet-plugin.vcproj \
		stardict-wordnet_parsedata-plugin.vcproj \
		stardict-xdxf-parsedata-plugin.vcproj \
		stardict.vcproj \
		textouthook.vcproj \
		textoutspy.vcproj \
		gtk.vsprops \
		main.vsprops
