
appicondir = $(datadir)/pixmaps
appicon_DATA = stardict.png

EXTRA_DIST = $(appicon_DATA) stardict_16.png stardict_32.png stardict_128.png \
	stardict-editor_16.png stardict-editor_32.png stardict-editor_128.png \
    stardict.xcf \
	stardict.ico stardict-editor.ico stardict-uninst.ico \
	stardict.old.png

## stardict.xcf file in this directory is used as base for many StarDict icons.
## The image is in GIMP native format, see http://www.gimp.org.
