DIST_SUBDIRS = stardict-dictdotcn-plugin stardict-youdaodict-plugin stardict-customdict-plugin stardict-man-plugin stardict-info-plugin stardict-fortune-plugin stardict-cal-plugin stardict-update-info-plugin stardict-html-parsedata-plugin stardict-xdxf-parsedata-plugin stardict-wordnet-plugin stardict-powerword-parsedata-plugin stardict-wiki-parsedata-plugin stardict-spell-plugin stardict-gucharmap-plugin stardict-festival-tts-plugin stardict-flite-tts-plugin stardict-espeak-tts-plugin stardict-espeak-ng-tts-plugin stardict-sapi-tts-plugin stardict-qqwry-plugin

SUBDIRS = $(DICTDOTCN_PLUGIN_DIR) $(YOUDAODICT_PLUGIN_DIR) $(CUSTOMDICT_PLUGIN_DIR) $(MAN_PLUGIN_DIR) $(INFO_PLUGIN_DIR) $(FORTUNE_PLUGIN_DIR) $(CAL_PLUGIN_DIR) $(UPDATE_INFO_PLUGIN_DIR) $(HTML_PARSEDATA_PLUGIN_DIR) $(XDXF_PARSEDATA_PLUGIN_DIR) $(WORDNET_PLUGIN_DIR) $(POWERWORD_PARSEDATA_PLUGIN_DIR) $(WIKI_PARSEDATA_PLUGIN_DIR) $(SPELL_PLUGIN_DIR) $(GUCHARMAP_PLUGIN_DIR) $(FESTIVAL_PLUGIN_DIR) $(FLITE_PLUGIN_DIR) $(ESPEAK_PLUGIN_DIR) $(ESPEAK_NG_PLUGIN_DIR) $(QQWRY_PLUGIN_DIR) stardict-sapi-tts-plugin
