noinst_LTLIBRARIES = libcommon.la

AM_CPPFLAGS = $(STARDICT_CFLAGS) -I$(top_builddir) -I$(top_srcdir)
libcommon_la_SOURCES = \
	libcommon.cpp libcommon.h \
	ifo_file.cpp ifo_file.h \
	lib_binary_dict_parser.cpp lib_binary_dict_parser.h \
	lib_chars.cpp lib_chars.h \
	lib_dict_data_block.cpp lib_dict_data_block.h \
	lib_res_store.cpp lib_res_store.h \
	lib_dict_verify.cpp \
	lib_dict_verify.h
