noinst_LIBRARIES = libstardict.a

libstardict_a_SOURCES = \
	lib.cpp lib.h	\
	dictziplib.cpp dictziplib.hpp	\
	distance.cpp distance.h	\
	mapfile.hpp file.hpp	\
	kmp.cpp kmp.h	\
	my_global.h m_ctype.h m_string.h	\
	ctype-mb.cpp ctype-utf8.cpp ctype-uca.cpp	\
	collation.cpp collation.h \
	data.hpp data.cpp \
	stddict.cpp stddict.hpp \
	treedict.cpp treedict.hpp	\
	common.cpp common.hpp \
	dict_client.cpp dict_client.hpp

INCLUDES = @STARDICT_CFLAGS@
