EXTRA_DIST = *.png

skindefaultdir = $(datadir)/stardict/pixmaps

if GPE_SUPPORT
skindefault_DATA = docklet_gpe_normal.png docklet_gpe_scan.png docklet_gpe_stop.png index_appendix.png index_wazard.png index_dictlist.png splash.png 
else
skindefault_DATA = docklet_normal.png docklet_scan.png docklet_stop.png index_appendix.png index_wazard.png index_dictlist.png splash.png
endif

