SUBDIRS = acrobat nsis

EXTRA_DIST = intl.h MinimizeToTray.cpp \
	MinimizeToTray.h resource.h stardictrc.rc StdAfx.h systray.cpp \
	systray.h systray-normal.ico systray-scan.ico systray-stop.ico \
	clipboard.cpp clipboard.h hotkey.cpp hotkey.h \
	win32_iskeyspressed.cpp win32_iskeyspressed.h \
	HookAPI.c.bak HookAPI.h.bak \
	TextOutSpy.dev TextOutSpy.c TextOutSpy.h ThTypes.c ThTypes.h \
	TextOutHook.dev TextOutHook.c TextOutHook.h GetWord.c GetWord.h \
	HookImportFunction.c HookImportFunction.h mouseover.cpp mouseover.h
