SUBDIRS = acrobat nsis

EXTRA_DIST = GetWord.c GetWord.h HookImportFunction.c HookImportFunction.h Makefile.am MinimizeToTray.cpp MinimizeToTray.h StdAfx.h TextOutHook.c TextOutHook.dev TextOutHook.h TextOutSpy.c TextOutSpy.dev TextOutSpy.h ThTypes.c ThTypes.h clipboard.cpp clipboard.h hotkey.cpp hotkey.h intl.h mouseover.cpp mouseover.h resource.h systray-normal.ico systray-scan.ico systray-stop.ico systray.cpp systray.h win32_iskeyspressed.cpp win32_iskeyspressed.h
